package com.leebeebeom.clothinghelper.data.model

data class User(
    val email: String,
    val name: String
)